center masonry and fix spacing

--- a/src/components/Masonry/index.scss
+++ b/src/components/Masonry/index.scss
@@ -3,6 +3,8 @@
   width: 100%;
   height: 100%;
   max-width: 1950px;
+  text-align: center;
+  margin: auto; 
 
   & > div {
     position: absolute;
